# APP-PUINAVE

./: .gitignore  1. Instalación de repositorio GitHu.txt  CHANGELOG.md  ~$Repositorio LExico Base (Excel)-1.xlsx  Índice propuesto del documento SGD.docx
SGODA-Builder-v2/builder/: pyproject.toml
SGODA-Builder-v2/builder/src/sgoda/: __init__.py
SGODA-Builder-v2/builder/tests/: test_cli.py
builder/: .gitignore  MANIFEST.in  README.md  ecosistema.sgoda  pyproject.toml  reporte_consolidado.html  reporte_consolidado.md  requirements.txt
builder/catalog_template/: sgoda.template.json
builder/docs/releases/: 0.10.0.md  0.9.0.md  1.0.0.md
builder/proyecto_catalogo/.sgoda/extensions/: catalog.json  registry.json
builder/proyecto_restaurado/.sgoda/extensions/: catalog.json
builder/scripts/: ci_smoke_test.py  package_smoke_test.py  validate_release.py
builder/src/sgoda/: __init__.py  __main__.py
builder/src/sgoda/audit/: __init__.py  audit_service.py  dependency_rules.py  engine.py  exporter.py  governance_rules.py  models.py  quality_rules.py  report.py  rules.py
builder/src/sgoda/cli/: __init__.py  commands.py  main.py
builder/src/sgoda/core/: __init__.py  config.py  constants.py  initializer.py  project.py  templates.py
builder/src/sgoda/dmp/: __init__.py
builder/src/sgoda/extensions/: __init__.py  archive_service.py  bundle_executor.py  bundle_models.py  bundle_planner.py  bundle_serializers.py  bundle_service.py  bundle_store.py  catalog_builder.py  catalog_models.py  catalog_serializers.py  catalog_service.py  catalog_store.py  compatibility.py  consolidated_report.py  dependency_resolver.py  export_service.py  import_service.py  integrity.py  manager.py  models.py  package_manifest.py  plugin_doctor.py  plugin_integrity.py  plugin_state.py  plugin_updater.py  registry.py  template_doctor.py  template_integrity.py  template_models.py  template_state.py  template_updater.py  template_validator.py  template_versions.py  validator.py
builder/src/sgoda/generators/: __init__.py  components.py  files.py  folders.py  registry.py
builder/src/sgoda/governance/: exceptions.py  governance_service.py  models.py  policy_engine.py  policy_loader.py  policy_repository.py  policy_validator.py  results.py  rule_evaluator.py  serializers.py
builder/src/sgoda/lifecycle/: __init__.py  backup.py  migrations.py  migrator.py  models.py  repair.py
builder/src/sgoda/operations/: __init__.py  collector.py  health.py  history.py  history_models.py  models.py  (+10 more)
builder/tests/: test_audit.py  test_audit_reports.py  test_bundle_cli.py  test_bundle_executor.py  test_bundle_history.py  test_bundle_rollback.py  test_bundle_service.py  test_bundle_store.py  test_catalog_cli.py  test_catalog_history.py  test_catalog_service.py  test_catalog_store.py  test_ci_configuration.py  test_cli.py  test_component_dependencies.py  test_component_generator.py  test_consolidated_report.py  test_core.py  test_delivery_b.py  test_delivery_c.py  test_dmp_domain.py  test_dmp_lifecycle.py  test_dmp_registry.py  test_event_models.py  test_export_import.py  test_export_import_cli.py  test_export_integrity.py  test_extension_registry.py  test_extension_validator.py  test_fair_care_rules.py  test_governance_exceptions.py  test_governance_governance_service.py  test_governance_models.py  test_governance_policy_engine.py  test_governance_policy_loader.py  test_governance_policy_repository.py  test_governance_policy_validator.py  test_governance_results.py  test_governance_rule_evaluator.py  test_governance_rules.py  (+74 more)
(+50 files in other folders)
