[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgoda-builder"
version = "1.13.0"
description = "Herramienta CLI para construir, generar y auditar proyectos SGODA-PUINAVE"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Proyecto SGODA-PUINAVE" }
]
maintainers = [
  { name = "Proyecto SGODA-PUINAVE" }
]
keywords = [
  "sgoda",
  "puinave",
  "data-governance",
  "dama-dmbok",
  "fair",
  "care",
  "project-builder"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
  "twine>=5.1"
]

[project.scripts]
sgoda = "sgoda.cli.main:main"

[project.urls]
Repository = "https://github.com/Poliyoko/APP-PUINAVE"
Issues = "https://github.com/Poliyoko/APP-PUINAVE/issues"
Changelog = "https://github.com/Poliyoko/APP-PUINAVE/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
